Added Npm Dependencies

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Jkan1/brook-logger/issues"
   },
-  "homepage": "https://github.com/Jkan1/brook-logger#readme"
+  "homepage": "https://github.com/Jkan1/brook-logger#readme",
+  "dependencies": {
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
+  }
 }
