--- a/package.json
+++ b/package.json
@@ -1,22 +1,43 @@
 {
   "name": "brook-logger",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Basic Logger",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config jestconfig.json",
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
+  "files": [
+    "lib/**/*"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Jkan1/brook-logger.git"
   },
   "author": "Jkan1",
+  "keywords": [
+    "Logger"
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Jkan1/brook-logger/issues"
   },
   "homepage": "https://github.com/Jkan1/brook-logger#readme",
   "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "jest": "^27.3.1",
+    "prettier": "^2.4.1",
+    "ts-jest": "^27.0.7",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.4.4"
   }
 }
