--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "test": "jest --config jestconfig.json",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
-    "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags"
+    "lint": "npx eslint src",
+    "check-format": "prettier --check \"src/**/*.ts\" \"src/**/*.js\"",
+    "prepare": "npm test && npm run lint && npm run format && npm run build"
   },
   "files": [
     "lib/**/*"
@@ -32,15 +29,9 @@
   },
   "homepage": "https://github.com/Jkan1/brook-logger#readme",
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.8",
-    "@babel/preset-typescript": "^7.15.0",
-    "@types/jest": "^27.0.2",
+    "eslint": "^8.8.0",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
-    "ts-jest": "^27.0.7",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.4.4"
   }
 }
