--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,9 @@
         "outDir": "./lib",
         "strict": true,
         // Ensure that .d.ts files are created by tsc, but not .js files
-        "emitDeclarationOnly": true,
+        "emitDeclarationOnly": false,
         // Ensure that Babel can safely transpile files in the TypeScript project
-        "isolatedModules": true
+        "isolatedModules": false
     },
     "include": [
         "src"
