--- a/jestconfig.json
+++ b/jestconfig.json
@@ -1,5 +1,5 @@
 {
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "testRegex": "(/__tests__/.*)\\.(jsx?|tsx?)$",
     "moduleFileExtensions": [
         "ts",
         "tsx",
